--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ matplotlib = "^3.9.2"
 Django = "^5.1.2"
 opencv-python = "^4.10.0.84"
 django-extensions = "^3.2.3"
+fastai = "^2.7.18"
 
 
 [tool.poetry.group.dev.dependencies]
