--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Django = "^5.1.2"
 opencv-python = "^4.10.0.84"
 django-extensions = "^3.2.3"
 fastai = "^2.7.18"
+djangorestframework = "^3.15.2"
 
 
 [tool.poetry.group.dev.dependencies]
