--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ opencv-python = "^4.10.0.84"
 django-extensions = "^3.2.3"
 fastai = "^2.7.18"
 djangorestframework = "^3.15.2"
+pillow = "^11.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
