--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ django-extensions = "^3.2.3"
 fastai = "^2.7.18"
 djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
+jupyter = "^1.1.1"
+plotly = "^6.0.0"
+requests = "^2.32.3"
+scipy = "^1.15.1"
 
 
 [tool.poetry.group.dev.dependencies]
